--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -435,6 +435,23 @@
     "no_content": "このポータルには利用可能なコンテンツがありません。",
     "failed_to_load_content": "ポータルコンテンツの読み込みに失敗しました"
   },
+  "welcome_portal": {
+    "title": "ウェルカムポータル",
+    "open_full_screen": "全画面で開く",
+    "loading": "ウェルカムポータルを読み込み中...",
+    "failed_to_load_url": "ポータルURLの読み込みに失敗しました",
+    "error_loading": "ポータルの読み込みエラー",
+    "welcome_title": "DesQTAへようこそ！",
+    "getting_around_title": "ナビゲーション",
+    "getting_around_p1": "左側のメニューを使用してナビゲートします。小さな画面の場合、メニューは自動的に非表示になりますが、隅のメニューボタンを使用して呼び出すことができます。",
+    "getting_around_p2": "メニューを使用して探索し、見つけることができるものを確認してください。学校がすべてのページを使用していない場合があることに注意してください。",
+    "dashboard_title": "ダッシュボード",
+    "dashboard_p1": "ダッシュボードページには、学校が有効にしたダッシュレット（無効にできないもの！）と、オン/オフを切り替えることができるオプションのダッシュレットが含まれています。",
+    "dashboard_p2": "一部のダッシュレットは整理に役立ち、一部は重要な情報を提供し、一部は単に楽しみのためのものです。",
+    "timetable_title": "時間割に色を付ける",
+    "timetable_p1": "時間割ページで、クラスをタップ（またはクリック）して詳細にアクセスし、次にパレットボタンをタップして時間割に色を付けます。",
+    "modal_aria_label": "ウェルカムポータルモーダル"
+  },
   "directory": {
     "description": "すべての学生を閲覧・検索",
     "filters": "フィルター",
