--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -21,7 +21,7 @@
   },
   "navigation": {
     "dashboard": "Dashboard",
-    "courses": "Courses", 
+    "courses": "Courses",
     "assessments": "Assessments",
     "timetable": "Timetable",
     "study": "Study",
@@ -79,7 +79,7 @@
   "features": {
     "lightning_fast": "Lightning-fast performance",
     "qr_login": "Seamless QR code login",
-    "beautiful_ui": "Beautiful, intuitive interface", 
+    "beautiful_ui": "Beautiful, intuitive interface",
     "analytics": "Advanced analytics dashboard",
     "notifications": "Real-time notifications",
     "offline": "Offline capability support",
@@ -108,12 +108,7 @@
     "step6_desc": "Return to DesQTA and use the \"Upload QR Code\" button to select and upload your saved QR code image. DesQTA will automatically log you in!",
     "help_title": "Need More Help?",
     "help_desc": "If you can't find the \"Connect Mobile App\" option, it might be called something different at your school, such as:",
-    "help_options": [
-      "Mobile Device Registration",
-      "App Setup", 
-      "QR Code Setup",
-      "Connect Device"
-    ],
+    "help_options": ["Mobile Device Registration", "App Setup", "QR Code Setup", "Connect Device"],
     "help_contact": "Contact your school's IT support if you still can't locate this option.",
     "got_it": "Got it, thanks!"
   },
@@ -481,6 +476,23 @@
     "loading_content": "Loading portal content...",
     "no_content": "No content available for this portal.",
     "failed_to_load_content": "Failed to load portal content"
+  },
+  "welcome_portal": {
+    "title": "Welcome Portal",
+    "open_full_screen": "Open Full Screen",
+    "loading": "Loading welcome portal...",
+    "failed_to_load_url": "Failed to load portal URL",
+    "error_loading": "Error loading portal",
+    "welcome_title": "Welcome to DesQTA!",
+    "getting_around_title": "Getting around",
+    "getting_around_p1": "Use the menu on the left to navigate. If you're on a small screen, the menu hides automatically, but you can summon it using the menu button in the corner.",
+    "getting_around_p2": "Use the menu to explore and see what you can find. Note that your school may not be using all of the pages.",
+    "dashboard_title": "Your dashboard",
+    "dashboard_p1": "The dashboard page includes dashlets which your school has enabled (and which you can't disable!), as well as optional dashlets that you can toggle on or off.",
+    "dashboard_p2": "Some dashlets help you to get organised, some give you key information, and some are just for fun.",
+    "timetable_title": "Colour your timetable",
+    "timetable_p1": "On the timetable page, tap (or click) on a class to access more details -- and then tap the palette button to colour up your timetable.",
+    "modal_aria_label": "Welcome Portal Modal"
   },
   "directory": {
     "description": "Browse and search through all students",
