--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -74,7 +74,16 @@
     "position_qr": "Position the QR code within the frame to scan",
     "camera_error": "No camera found on this device.",
     "camera_permission": "Unable to access camera. Please check browser permissions.",
-    "live_scan_error": "Failed to start live scan."
+    "live_scan_error": "Failed to start live scan.",
+    "manual_auth_instructions_title": "Manual Authentication",
+    "manual_auth_step1": "1. Login as per normal in the new window.",
+    "manual_auth_step2": "2. Wait for the window to close automatically.",
+    "manual_auth_note": "Do not close the login window manually. It will close once authentication is complete.",
+    "feature_dashboard_desc": "Main overview",
+    "feature_assessments_desc": "View assignments",
+    "feature_timetable_desc": "Class schedule",
+    "feature_analytics_desc": "Performance data",
+    "feature_settings_desc": "App preferences"
   },
   "features": {
     "lightning_fast": "Lightning-fast performance",
@@ -272,7 +281,8 @@
     "no_upcoming_assessments": "No upcoming assessments.",
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
-    "get_new_tip": "Get new study tip"
+    "get_new_tip": "Get new study tip",
+    "tabs_label": "Study sections"
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
@@ -533,5 +543,79 @@
     "error_loading": "Error loading reports.",
     "loading": "Loading reports...",
     "download": "Download"
+  },
+  "performance": {
+    "title": "Performance Test Results - DesQTA",
+    "title_main": "Performance Test Results",
+    "test_completed": "Test completed on {date} • {count} pages analyzed",
+    "description": "Detailed performance analysis and metrics",
+    "back_to_settings": "Back to Settings",
+    "go_back_to_settings": "Go Back to Settings",
+    "error_loading_title": "Error Loading Results",
+    "failed_to_parse_results": "Failed to parse performance test results",
+    "failed_to_parse_stored": "Failed to parse stored performance test results",
+    "no_results_found": "No performance test results found",
+    "total_duration": "Total Duration",
+    "pages_tested": "Pages Tested",
+    "avg_load_time": "Avg Load Time",
+    "total_errors": "Total Errors",
+    "avg_cpu_usage": "Avg CPU Usage",
+    "load_time_analysis": "Load Time Analysis",
+    "load_time_ms": "Load Time (ms)",
+    "dom_content_loaded": "DOM Content Loaded",
+    "time_ms": "Time (ms)",
+    "memory_usage": "Memory Usage",
+    "memory_mb": "Memory (MB)",
+    "network_requests": "Network Requests",
+    "request_count": "Request Count",
+    "cpu_usage_over_time": "CPU Usage Over Time",
+    "cpu_average_peak": "Average: {average}% • Peak: {peak}%",
+    "cpu_realtime": "Real-time CPU usage during performance test",
+    "cpu_usage_percent": "CPU Usage (%)",
+    "no_cpu_data": "No CPU data available",
+    "memory_usage_over_time": "Memory Usage Over Time",
+    "memory_average_peak": "Average: {average}% • Peak: {peak}%",
+    "memory_realtime": "Real-time memory usage during performance test",
+    "memory_usage_percent": "Memory Usage (%)",
+    "no_memory_data": "No memory data available",
+    "gpu_usage_over_time": "GPU Usage Over Time",
+    "gpu_realtime": "Real-time GPU usage during performance test",
+    "gpu_usage_percent": "GPU Usage (%)",
+    "performance_range": "Performance Range",
+    "range_description": "Fastest and slowest page load times",
+    "fastest_page": "Fastest Page",
+    "slowest_page": "Slowest Page",
+    "error_summary": "Error Summary",
+    "error_description": "JavaScript errors and warnings detected",
+    "js_errors": "JavaScript Errors",
+    "warnings": "Warnings",
+    "overall_errors": "Overall Errors",
+    "page_details": "Page Performance Details",
+    "page_details_description": "Pages sorted by load time (slowest first)",
+    "load_time": "Load Time",
+    "dom_ready": "DOM Ready",
+    "memory": "Memory",
+    "requests": "Requests",
+    "first_paint": "First Paint",
+    "first_contentful_paint": "First Contentful Paint",
+    "system_resource_usage": "System Resource Usage",
+    "avg_cpu": "Avg CPU",
+    "peak": "Peak: {value}%",
+    "avg_memory": "Avg Memory",
+    "avg_gpu": "Avg GPU",
+    "errors_count": "{count} errors",
+    "warnings_count": "{count} warnings",
+    "no_issues": "No issues"
+  },
+  "plugins": {
+    "installed_title": "Plugin Installed",
+    "installed_body": "The plugin has been successfully installed.",
+    "install_failed_title": "Installation Failed",
+    "install_failed_body": "Failed to install the plugin. Please try again.",
+    "uninstalled_title": "Plugin Uninstalled",
+    "uninstalled_body": "The plugin has been successfully uninstalled.",
+    "uninstall_failed_title": "Uninstallation Failed",
+    "uninstall_failed_body": "Failed to uninstall the plugin. Please try again.",
+    "screenshot_alt": "Plugin screenshot"
   }
 }
