feat: add translations for performance, plugins, and login features to all languages

--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -491,5 +491,82 @@
     "error_loading": "Fehler beim Laden der Berichte.",
     "loading": "Berichte werden geladen...",
     "download": "Herunterladen"
+  },
+  "performance": {
+    "title": "Leistungstestergebnisse - DesQTA",
+    "title_main": "Leistungstestergebnisse",
+    "test_completed": "Test abgeschlossen am {date} • {count} Seiten analysiert",
+    "description": "Detaillierte Leistungsanalyse und Metriken",
+    "back_to_settings": "Zurück zu den Einstellungen",
+    "go_back_to_settings": "Zurück zu den Einstellungen",
+    "error_loading_title": "Fehler beim Laden der Ergebnisse",
+    "failed_to_parse_results": "Fehler beim Analysieren der Leistungstestergebnisse",
+    "failed_to_parse_stored": "Fehler beim Analysieren der gespeicherten Leistungstestergebnisse",
+    "no_results_found": "Keine Leistungstestergebnisse gefunden",
+    "total_duration": "Gesamtdauer",
+    "pages_tested": "Getestete Seiten",
+    "avg_load_time": "Durchschnittliche Ladezeit",
+    "total_errors": "Gesamtfehler",
+    "avg_cpu_usage": "Durchschnittliche CPU-Auslastung",
+    "load_time_analysis": "Ladezeitanalyse",
+    "load_time_ms": "Ladezeit (ms)",
+    "dom_content_loaded": "DOM-Inhalt Geladen",
+    "time_ms": "Zeit (ms)",
+    "memory_usage": "Speichernutzung",
+    "memory_mb": "Speicher (MB)",
+    "network_requests": "Netzwerkanfragen",
+    "request_count": "Anfragenanzahl",
+    "cpu_usage_over_time": "CPU-Auslastung im Zeitverlauf",
+    "cpu_average_peak": "Durchschnitt: {average}% • Spitze: {peak}%",
+    "cpu_realtime": "Echtzeit-CPU-Auslastung während des Leistungstests",
+    "cpu_usage_percent": "CPU-Auslastung (%)",
+    "no_cpu_data": "Keine CPU-Daten verfügbar",
+    "memory_usage_over_time": "Speichernutzung im Zeitverlauf",
+    "memory_average_peak": "Durchschnitt: {average}% • Spitze: {peak}%",
+    "memory_realtime": "Echtzeit-Speichernutzung während des Leistungstests",
+    "memory_usage_percent": "Speichernutzung (%)",
+    "no_memory_data": "Keine Speicherdaten verfügbar",
+    "gpu_usage_over_time": "GPU-Auslastung im Zeitverlauf",
+    "gpu_realtime": "Echtzeit-GPU-Auslastung während des Leistungstests",
+    "gpu_usage_percent": "GPU-Auslastung (%)",
+    "performance_range": "Leistungsbereich",
+    "range_description": "Schnellste und langsamste Seitenladezeiten",
+    "fastest_page": "Schnellste Seite",
+    "slowest_page": "Langsamste Seite",
+    "error_summary": "Fehlerzusammenfassung",
+    "error_description": "Erkannte JavaScript-Fehler und Warnungen",
+    "js_errors": "JavaScript-Fehler",
+    "warnings": "Warnungen",
+    "overall_errors": "Gesamtfehler",
+    "page_details": "Seitenleistungsdetails",
+    "page_details_description": "Seiten sortiert nach Ladezeit (langsamste zuerst)",
+    "load_time": "Ladezeit",
+    "dom_ready": "DOM Bereit",
+    "memory": "Speicher",
+    "requests": "Anfragen",
+    "first_paint": "Erstes Malen",
+    "first_contentful_paint": "Erstes Inhaltsmalen",
+    "system_resource_usage": "Systemressourcennutzung",
+    "avg_cpu": "Durchschnittliche CPU",
+    "peak": "Spitze: {value}%",
+    "avg_memory": "Durchschnittlicher Speicher",
+    "avg_gpu": "Durchschnittliche GPU",
+    "errors_count": "{count} Fehler",
+    "warnings_count": "{count} Warnungen",
+    "no_issues": "Keine Probleme"
+  },
+  "plugins": {
+    "installed_title": "Plugin Installiert",
+    "installed_body": "Das Plugin wurde erfolgreich installiert.",
+    "install_failed_title": "Installation Fehlgeschlagen",
+    "install_failed_body": "Die Installation des Plugins ist fehlgeschlagen. Bitte versuchen Sie es erneut.",
+    "uninstalled_title": "Plugin Deinstalliert",
+    "uninstalled_body": "Das Plugin wurde erfolgreich deinstalliert.",
+    "uninstall_failed_title": "Deinstallation Fehlgeschlagen",
+    "uninstall_failed_body": "Die Deinstallation des Plugins ist fehlgeschlagen. Bitte versuchen Sie es erneut.",
+    "screenshot_alt": "Plugin-Screenshot"
+  },
+  "study": {
+    "tabs_label": "Studienabschnitte"
   }
 }
