--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -504,5 +504,82 @@
     "error_loading": "Error loading treasure reports.",
     "loading": "Loading treasure reports...",
     "download": "Claim Treasure"
+  },
+  "performance": {
+    "title": "Performance Test Results - DesQTA",
+    "title_main": "Performance Test Results",
+    "test_completed": "Test completed on {date} • {count} pages analyzed",
+    "description": "Detailed performance analysis and metrics",
+    "back_to_settings": "Back to Settings",
+    "go_back_to_settings": "Back to Settings",
+    "error_loading_title": "Error Loading Results",
+    "failed_to_parse_results": "Failed to parse performance test results",
+    "failed_to_parse_stored": "Failed to parse stored performance test results",
+    "no_results_found": "No performance test results found",
+    "total_duration": "Total Duration",
+    "pages_tested": "Pages Tested",
+    "avg_load_time": "Avg Load Time",
+    "total_errors": "Total Errors",
+    "avg_cpu_usage": "Avg CPU Usage",
+    "load_time_analysis": "Load Time Analysis",
+    "load_time_ms": "Load Time (ms)",
+    "dom_content_loaded": "DOM Content Loaded",
+    "time_ms": "Time (ms)",
+    "memory_usage": "Memory Usage",
+    "memory_mb": "Memory (MB)",
+    "network_requests": "Network Requests",
+    "request_count": "Request Count",
+    "cpu_usage_over_time": "CPU Usage Over Time",
+    "cpu_average_peak": "Average: {average}% • Peak: {peak}%",
+    "cpu_realtime": "Real-time CPU usage during performance test",
+    "cpu_usage_percent": "CPU Usage (%)",
+    "no_cpu_data": "No CPU data available",
+    "memory_usage_over_time": "Memory Usage Over Time",
+    "memory_average_peak": "Average: {average}% • Peak: {peak}%",
+    "memory_realtime": "Real-time memory usage during performance test",
+    "memory_usage_percent": "Memory Usage (%)",
+    "no_memory_data": "No memory data available",
+    "gpu_usage_over_time": "GPU Usage Over Time",
+    "gpu_realtime": "Real-time GPU usage during performance test",
+    "gpu_usage_percent": "GPU Usage (%)",
+    "performance_range": "Performance Range",
+    "range_description": "Fastest and slowest page load times",
+    "fastest_page": "Fastest Page",
+    "slowest_page": "Slowest Page",
+    "error_summary": "Error Summary",
+    "error_description": "JavaScript errors and warnings detected",
+    "js_errors": "JavaScript Errors",
+    "warnings": "Warnings",
+    "overall_errors": "Overall Errors",
+    "page_details": "Page Performance Details",
+    "page_details_description": "Pages sorted by load time (slowest first)",
+    "load_time": "Load Time",
+    "dom_ready": "DOM Ready",
+    "memory": "Memory",
+    "requests": "Requests",
+    "first_paint": "First Paint",
+    "first_contentful_paint": "First Contentful Paint",
+    "system_resource_usage": "System Resource Usage",
+    "avg_cpu": "Avg CPU",
+    "peak": "Peak: {value}%",
+    "avg_memory": "Avg Memory",
+    "avg_gpu": "Avg GPU",
+    "errors_count": "{count} errors",
+    "warnings_count": "{count} warnings",
+    "no_issues": "No issues"
+  },
+  "plugins": {
+    "installed_title": "Plugin Installed",
+    "installed_body": "The plugin has been successfully installed.",
+    "install_failed_title": "Installation Failed",
+    "install_failed_body": "Failed to install the plugin. Please try again.",
+    "uninstalled_title": "Plugin Uninstalled",
+    "uninstalled_body": "The plugin has been successfully uninstalled.",
+    "uninstall_failed_title": "Uninstallation Failed",
+    "uninstall_failed_body": "Failed to uninstall the plugin. Please try again.",
+    "screenshot_alt": "Plugin screenshot"
+  },
+  "study": {
+    "tabs_label": "Study sections"
   }
 }
