--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -491,5 +491,82 @@
     "error_loading": "Error cargando reportes.",
     "loading": "Cargando reportes...",
     "download": "Descargar"
+  },
+  "performance": {
+    "title": "Resultados de Prueba de Rendimiento - DesQTA",
+    "title_main": "Resultados de Prueba de Rendimiento",
+    "test_completed": "Prueba completada el {date} • {count} páginas analizadas",
+    "description": "Análisis detallado de rendimiento y métricas",
+    "back_to_settings": "Volver a Configuración",
+    "go_back_to_settings": "Volver a Configuración",
+    "error_loading_title": "Error al Cargar Resultados",
+    "failed_to_parse_results": "Error al analizar los resultados de la prueba de rendimiento",
+    "failed_to_parse_stored": "Error al analizar los resultados almacenados de la prueba de rendimiento",
+    "no_results_found": "No se encontraron resultados de prueba de rendimiento",
+    "total_duration": "Duración Total",
+    "pages_tested": "Páginas Probadas",
+    "avg_load_time": "Tiempo de Carga Promedio",
+    "total_errors": "Errores Totales",
+    "avg_cpu_usage": "Uso Promedio de CPU",
+    "load_time_analysis": "Análisis de Tiempo de Carga",
+    "load_time_ms": "Tiempo de Carga (ms)",
+    "dom_content_loaded": "Contenido DOM Cargado",
+    "time_ms": "Tiempo (ms)",
+    "memory_usage": "Uso de Memoria",
+    "memory_mb": "Memoria (MB)",
+    "network_requests": "Solicitudes de Red",
+    "request_count": "Recuento de Solicitudes",
+    "cpu_usage_over_time": "Uso de CPU a lo Largo del Tiempo",
+    "cpu_average_peak": "Promedio: {average}% • Pico: {peak}%",
+    "cpu_realtime": "Uso de CPU en tiempo real durante la prueba de rendimiento",
+    "cpu_usage_percent": "Uso de CPU (%)",
+    "no_cpu_data": "No hay datos de CPU disponibles",
+    "memory_usage_over_time": "Uso de Memoria a lo Largo del Tiempo",
+    "memory_average_peak": "Promedio: {average}% • Pico: {peak}%",
+    "memory_realtime": "Uso de memoria en tiempo real durante la prueba de rendimiento",
+    "memory_usage_percent": "Uso de Memoria (%)",
+    "no_memory_data": "No hay datos de memoria disponibles",
+    "gpu_usage_over_time": "Uso de GPU a lo Largo del Tiempo",
+    "gpu_realtime": "Uso de GPU en tiempo real durante la prueba de rendimiento",
+    "gpu_usage_percent": "Uso de GPU (%)",
+    "performance_range": "Rango de Rendimiento",
+    "range_description": "Tiempos de carga de página más rápidos y más lentos",
+    "fastest_page": "Página Más Rápida",
+    "slowest_page": "Página Más Lenta",
+    "error_summary": "Resumen de Errores",
+    "error_description": "Errores y advertencias de JavaScript detectados",
+    "js_errors": "Errores de JavaScript",
+    "warnings": "Advertencias",
+    "overall_errors": "Errores Generales",
+    "page_details": "Detalles de Rendimiento de Página",
+    "page_details_description": "Páginas ordenadas por tiempo de carga (más lentas primero)",
+    "load_time": "Tiempo de Carga",
+    "dom_ready": "DOM Listo",
+    "memory": "Memoria",
+    "requests": "Solicitudes",
+    "first_paint": "Primera Pintura",
+    "first_contentful_paint": "Primera Pintura de Contenido",
+    "system_resource_usage": "Uso de Recursos del Sistema",
+    "avg_cpu": "CPU Promedio",
+    "peak": "Pico: {value}%",
+    "avg_memory": "Memoria Promedio",
+    "avg_gpu": "GPU Promedio",
+    "errors_count": "{count} errores",
+    "warnings_count": "{count} advertencias",
+    "no_issues": "Sin problemas"
+  },
+  "plugins": {
+    "installed_title": "Complemento Instalado",
+    "installed_body": "El complemento se ha instalado correctamente.",
+    "install_failed_title": "Error de Instalación",
+    "install_failed_body": "Error al instalar el complemento. Por favor, inténtalo de nuevo.",
+    "uninstalled_title": "Complemento Desinstalado",
+    "uninstalled_body": "El complemento se ha desinstalado correctamente.",
+    "uninstall_failed_title": "Error de Desinstalación",
+    "uninstall_failed_body": "Error al desinstalar el complemento. Por favor, inténtalo de nuevo.",
+    "screenshot_alt": "Captura de pantalla del complemento"
+  },
+  "study": {
+    "tabs_label": "Secciones de Estudio"
   }
 }
