--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -72,7 +72,16 @@
     "position_qr": "Positionnez le code QR dans le cadre pour le scanner",
     "camera_error": "Aucune caméra trouvée sur cet appareil.",
     "camera_permission": "Impossible d'accéder à la caméra. Veuillez vérifier les permissions du navigateur.",
-    "live_scan_error": "Échec du démarrage du scan en direct."
+    "live_scan_error": "Échec du démarrage du scan en direct.",
+    "manual_auth_instructions_title": "Authentification Manuelle",
+    "manual_auth_step1": "1. Connectez-vous normalement dans la nouvelle fenêtre.",
+    "manual_auth_step2": "2. Attendez que la fenêtre se ferme automatiquement.",
+    "manual_auth_note": "Ne fermez pas manuellement la fenêtre de connexion. Elle se fermera automatiquement une fois l'authentification terminée.",
+    "feature_dashboard_desc": "Vue d'ensemble principale",
+    "feature_assessments_desc": "Voir les devoirs",
+    "feature_timetable_desc": "Emploi du temps",
+    "feature_analytics_desc": "Données de performance",
+    "feature_settings_desc": "Préférences de l'application"
   },
   "about": {
     "title": "À propos de DesQTA",
@@ -491,5 +500,82 @@
     "error_loading": "Erreur de chargement des rapports.",
     "loading": "Chargement des rapports...",
     "download": "Télécharger"
+  },
+  "performance": {
+    "title": "Résultats des Tests de Performance - DesQTA",
+    "title_main": "Résultats des Tests de Performance",
+    "test_completed": "Test terminé le {date} • {count} pages analysées",
+    "description": "Analyse détaillée des performances et métriques",
+    "back_to_settings": "Retour aux Paramètres",
+    "go_back_to_settings": "Retour aux Paramètres",
+    "error_loading_title": "Erreur de Chargement des Résultats",
+    "failed_to_parse_results": "Échec de l'analyse des résultats des tests de performance",
+    "failed_to_parse_stored": "Échec de l'analyse des résultats stockés des tests de performance",
+    "no_results_found": "Aucun résultat de test de performance trouvé",
+    "total_duration": "Durée Totale",
+    "pages_tested": "Pages Testées",
+    "avg_load_time": "Temps de Chargement Moyen",
+    "total_errors": "Erreurs Totales",
+    "avg_cpu_usage": "Utilisation Moyenne du CPU",
+    "load_time_analysis": "Analyse du Temps de Chargement",
+    "load_time_ms": "Temps de Chargement (ms)",
+    "dom_content_loaded": "Contenu DOM Chargé",
+    "time_ms": "Temps (ms)",
+    "memory_usage": "Utilisation de la Mémoire",
+    "memory_mb": "Mémoire (MB)",
+    "network_requests": "Requêtes Réseau",
+    "request_count": "Nombre de Requêtes",
+    "cpu_usage_over_time": "Utilisation du CPU au Fil du Temps",
+    "cpu_average_peak": "Moyenne: {average}% • Pic: {peak}%",
+    "cpu_realtime": "Utilisation du CPU en temps réel pendant le test de performance",
+    "cpu_usage_percent": "Utilisation du CPU (%)",
+    "no_cpu_data": "Aucune donnée CPU disponible",
+    "memory_usage_over_time": "Utilisation de la Mémoire au Fil du Temps",
+    "memory_average_peak": "Moyenne: {average}% • Pic: {peak}%",
+    "memory_realtime": "Utilisation de la mémoire en temps réel pendant le test de performance",
+    "memory_usage_percent": "Utilisation de la Mémoire (%)",
+    "no_memory_data": "Aucune donnée mémoire disponible",
+    "gpu_usage_over_time": "Utilisation du GPU au Fil du Temps",
+    "gpu_realtime": "Utilisation du GPU en temps réel pendant le test de performance",
+    "gpu_usage_percent": "Utilisation du GPU (%)",
+    "performance_range": "Plage de Performance",
+    "range_description": "Temps de chargement de page les plus rapides et les plus lents",
+    "fastest_page": "Page la Plus Rapide",
+    "slowest_page": "Page la Plus Lente",
+    "error_summary": "Résumé des Erreurs",
+    "error_description": "Erreurs et avertissements JavaScript détectés",
+    "js_errors": "Erreurs JavaScript",
+    "warnings": "Avertissements",
+    "overall_errors": "Erreurs Globales",
+    "page_details": "Détails de Performance des Pages",
+    "page_details_description": "Pages triées par temps de chargement (plus lentes en premier)",
+    "load_time": "Temps de Chargement",
+    "dom_ready": "DOM Prêt",
+    "memory": "Mémoire",
+    "requests": "Requêtes",
+    "first_paint": "Premier Peinture",
+    "first_contentful_paint": "Première Peinture de Contenu",
+    "system_resource_usage": "Utilisation des Ressources Système",
+    "avg_cpu": "CPU Moyen",
+    "peak": "Pic: {value}%",
+    "avg_memory": "Mémoire Moyenne",
+    "avg_gpu": "GPU Moyen",
+    "errors_count": "{count} erreurs",
+    "warnings_count": "{count} avertissements",
+    "no_issues": "Aucun problème"
+  },
+  "plugins": {
+    "installed_title": "Extension Installée",
+    "installed_body": "L'extension a été installée avec succès.",
+    "install_failed_title": "Échec de l'Installation",
+    "install_failed_body": "Échec de l'installation de l'extension. Veuillez réessayer.",
+    "uninstalled_title": "Extension Désinstallée",
+    "uninstalled_body": "L'extension a été désinstallée avec succès.",
+    "uninstall_failed_title": "Échec de la Désinstallation",
+    "uninstall_failed_body": "Échec de la désinstallation de l'extension. Veuillez réessayer.",
+    "screenshot_alt": "Capture d'écran de l'extension"
+  },
+  "study": {
+    "tabs_label": "Sections d'Étude"
   }
 }
