--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -491,5 +491,82 @@
     "error_loading": "加载报告时出错。",
     "loading": "正在加载报告...",
     "download": "下载"
+  },
+  "performance": {
+    "title": "性能测试结果 - DesQTA",
+    "title_main": "性能测试结果",
+    "test_completed": "测试完成于 {date} • 分析了 {count} 个页面",
+    "description": "详细的性能分析和指标",
+    "back_to_settings": "返回设置",
+    "go_back_to_settings": "返回设置",
+    "error_loading_title": "加载结果时出错",
+    "failed_to_parse_results": "解析性能测试结果失败",
+    "failed_to_parse_stored": "解析存储的性能测试结果失败",
+    "no_results_found": "未找到性能测试结果",
+    "total_duration": "总持续时间",
+    "pages_tested": "已测试页面",
+    "avg_load_time": "平均加载时间",
+    "total_errors": "总错误数",
+    "avg_cpu_usage": "平均CPU使用率",
+    "load_time_analysis": "加载时间分析",
+    "load_time_ms": "加载时间（毫秒）",
+    "dom_content_loaded": "DOM内容已加载",
+    "time_ms": "时间（毫秒）",
+    "memory_usage": "内存使用",
+    "memory_mb": "内存（MB）",
+    "network_requests": "网络请求",
+    "request_count": "请求计数",
+    "cpu_usage_over_time": "CPU使用率随时间变化",
+    "cpu_average_peak": "平均：{average}% • 峰值：{peak}%",
+    "cpu_realtime": "性能测试期间的实时CPU使用率",
+    "cpu_usage_percent": "CPU使用率（%）",
+    "no_cpu_data": "无CPU数据可用",
+    "memory_usage_over_time": "内存使用率随时间变化",
+    "memory_average_peak": "平均：{average}% • 峰值：{peak}%",
+    "memory_realtime": "性能测试期间的实时内存使用率",
+    "memory_usage_percent": "内存使用率（%）",
+    "no_memory_data": "无内存数据可用",
+    "gpu_usage_over_time": "GPU使用率随时间变化",
+    "gpu_realtime": "性能测试期间的实时GPU使用率",
+    "gpu_usage_percent": "GPU使用率（%）",
+    "performance_range": "性能范围",
+    "range_description": "最快和最慢的页面加载时间",
+    "fastest_page": "最快页面",
+    "slowest_page": "最慢页面",
+    "error_summary": "错误摘要",
+    "error_description": "检测到的JavaScript错误和警告",
+    "js_errors": "JavaScript错误",
+    "warnings": "警告",
+    "overall_errors": "总体错误",
+    "page_details": "页面性能详情",
+    "page_details_description": "按加载时间排序的页面（最慢的在前）",
+    "load_time": "加载时间",
+    "dom_ready": "DOM就绪",
+    "memory": "内存",
+    "requests": "请求",
+    "first_paint": "首次绘制",
+    "first_contentful_paint": "首次内容绘制",
+    "system_resource_usage": "系统资源使用",
+    "avg_cpu": "平均CPU",
+    "peak": "峰值：{value}%",
+    "avg_memory": "平均内存",
+    "avg_gpu": "平均GPU",
+    "errors_count": "{count} 个错误",
+    "warnings_count": "{count} 个警告",
+    "no_issues": "无问题"
+  },
+  "plugins": {
+    "installed_title": "插件已安装",
+    "installed_body": "插件已成功安装。",
+    "install_failed_title": "安装失败",
+    "install_failed_body": "安装插件失败。请重试。",
+    "uninstalled_title": "插件已卸载",
+    "uninstalled_body": "插件已成功卸载。",
+    "uninstall_failed_title": "卸载失败",
+    "uninstall_failed_body": "卸载插件失败。请重试。",
+    "screenshot_alt": "插件截图"
+  },
+  "study": {
+    "tabs_label": "学习部分"
   }
 }
