--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -491,5 +491,82 @@
     "error_loading": "レポートの読み込みエラー。",
     "loading": "レポートを読み込み中...",
     "download": "ダウンロード"
+  },
+  "performance": {
+    "title": "パフォーマンステスト結果 - DesQTA",
+    "title_main": "パフォーマンステスト結果",
+    "test_completed": "{date}にテスト完了 • {count}ページを分析",
+    "description": "詳細なパフォーマンス分析とメトリクス",
+    "back_to_settings": "設定に戻る",
+    "go_back_to_settings": "設定に戻る",
+    "error_loading_title": "結果の読み込みエラー",
+    "failed_to_parse_results": "パフォーマンステスト結果の解析に失敗しました",
+    "failed_to_parse_stored": "保存されたパフォーマンステスト結果の解析に失敗しました",
+    "no_results_found": "パフォーマンステスト結果が見つかりません",
+    "total_duration": "合計時間",
+    "pages_tested": "テストされたページ",
+    "avg_load_time": "平均読み込み時間",
+    "total_errors": "合計エラー",
+    "avg_cpu_usage": "平均CPU使用率",
+    "load_time_analysis": "読み込み時間分析",
+    "load_time_ms": "読み込み時間（ミリ秒）",
+    "dom_content_loaded": "DOMコンテンツ読み込み済み",
+    "time_ms": "時間（ミリ秒）",
+    "memory_usage": "メモリ使用量",
+    "memory_mb": "メモリ（MB）",
+    "network_requests": "ネットワークリクエスト",
+    "request_count": "リクエスト数",
+    "cpu_usage_over_time": "時間経過によるCPU使用率",
+    "cpu_average_peak": "平均：{average}% • ピーク：{peak}%",
+    "cpu_realtime": "パフォーマンステスト中のリアルタイムCPU使用率",
+    "cpu_usage_percent": "CPU使用率（%）",
+    "no_cpu_data": "CPUデータがありません",
+    "memory_usage_over_time": "時間経過によるメモリ使用率",
+    "memory_average_peak": "平均：{average}% • ピーク：{peak}%",
+    "memory_realtime": "パフォーマンステスト中のリアルタイムメモリ使用率",
+    "memory_usage_percent": "メモリ使用率（%）",
+    "no_memory_data": "メモリデータがありません",
+    "gpu_usage_over_time": "時間経過によるGPU使用率",
+    "gpu_realtime": "パフォーマンステスト中のリアルタイムGPU使用率",
+    "gpu_usage_percent": "GPU使用率（%）",
+    "performance_range": "パフォーマンス範囲",
+    "range_description": "最も速いページと最も遅いページの読み込み時間",
+    "fastest_page": "最も速いページ",
+    "slowest_page": "最も遅いページ",
+    "error_summary": "エラーサマリー",
+    "error_description": "検出されたJavaScriptエラーと警告",
+    "js_errors": "JavaScriptエラー",
+    "warnings": "警告",
+    "overall_errors": "全体エラー",
+    "page_details": "ページパフォーマンス詳細",
+    "page_details_description": "読み込み時間でソートされたページ（最も遅い順）",
+    "load_time": "読み込み時間",
+    "dom_ready": "DOM準備完了",
+    "memory": "メモリ",
+    "requests": "リクエスト",
+    "first_paint": "初回ペイント",
+    "first_contentful_paint": "初回コンテンツペイント",
+    "system_resource_usage": "システムリソース使用量",
+    "avg_cpu": "平均CPU",
+    "peak": "ピーク：{value}%",
+    "avg_memory": "平均メモリ",
+    "avg_gpu": "平均GPU",
+    "errors_count": "{count}個のエラー",
+    "warnings_count": "{count}個の警告",
+    "no_issues": "問題なし"
+  },
+  "plugins": {
+    "installed_title": "プラグインがインストールされました",
+    "installed_body": "プラグインが正常にインストールされました。",
+    "install_failed_title": "インストール失敗",
+    "install_failed_body": "プラグインのインストールに失敗しました。もう一度お試しください。",
+    "uninstalled_title": "プラグインがアンインストールされました",
+    "uninstalled_body": "プラグインが正常にアンインストールされました。",
+    "uninstall_failed_title": "アンインストール失敗",
+    "uninstall_failed_body": "プラグインのアンインストールに失敗しました。もう一度お試しください。",
+    "screenshot_alt": "プラグインのスクリーンショット"
+  },
+  "study": {
+    "tabs_label": "学習セクション"
   }
 }
